--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "files": [
