--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,33 @@
 services:
   backend:
-    build: .
+    build: backend/
     restart: always
     ports:
       - 3000:3000
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
-    dns_search: .
+  frontend:
+    build: frontend/
+    restart: always
+    environment:
+      - VITE_BACKEND_URL=/api/
+    depends_on:
+      - backend
+    volumes:
+      - frontend-dist:/frontend-dist
+    command: >
+      sh -c "npm run build && 
+      cp -R /usr/app/frontend/dist/* /frontend-dist/ && 
+      tail -f /dev/null"
+  proxy:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - backend
+      - frontend
+    volumes:
+      - frontend-dist:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+
+volumes: 
+  frontend-dist:
