--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,11 @@ services:
     volumes:
       - frontend-dist:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/www:/var/www/certbot
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot
 
 volumes: 
   frontend-dist:
