--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,11 @@
 server {
     listen 80;
+    listen [::]:80;
+    server_name: _;
+
+    location / .well-known/acme-challenge {
+        root var/www/certbot;
+    }
 
     location / {
         root /usr/share/nginx/html;
