--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,10 +29,12 @@ services:
       - frontend-dist:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./certbot/www:/var/www/certbot
+      - ./certbot/data:/etc/letsencrypt
   certbot:
     image: certbot/certbot
     volumes:
       - ./certbot/www:/var/www/certbot
+      - ./certbot/data:/etc/letsencrypt
 
 volumes: 
   frontend-dist:
