--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,14 +6,29 @@ server {
     }
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        return 301 https://$host$request_uri;
+        # root /usr/share/nginx/html;
+        # index index.html;
+        # try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
         proxy_pass http://backend:3000/;
         # proxy_set_header Host $host;
         # proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name kirillyusikov.ru;
+
+    ssl_certificate /etc/letsencrypt/live/kirillyusikov.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/kirillyusikov.ru/privkey.pem;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
