fix: default.conf#4

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,15 +7,10 @@ server {
 
     location / {
         return 301 https://$host$request_uri;
-        # root /usr/share/nginx/html;
-        # index index.html;
-        # try_files $uri $uri/ /index.html;
     }
 
     location /api/ {
         proxy_pass http://backend:3000/;
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
@@ -30,5 +25,9 @@ server {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+        proxy_pass https://backend:3000/;
     }
 }
