fix: default.conf#5

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:3000/;
+        return 301 https://backend:3000/;
     }
 }
 
