fix: default.conf#7

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,10 +8,6 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
-
-    location /api/ {
-        return 301 https://$host/api/;
-    }
 }
 
 server {
@@ -28,6 +24,6 @@ server {
     }
 
     location /api/ {
-        proxy_pass https://backend:3000/;
+        proxy_pass http://backend:3000/;
     }
 }
